# Master

./: README.md
ethercat/: CMakeLists.txt  CMakeLists.txt~  app (copy).cpp  app.cpp  app.cpp~  cnc.cpp~  cnc.c~  cnc.hpp  cnc.hpp~  cnc.h~  key.cpp  parse.cpp  parse.cpp~  parse.h  platform.h  recat.cpp  recat.cpp~  recat.h  thread.hpp  timer.cpp  timer.h
ethercat/etc/init.d/: ethercat
ethercat/lib/: libmodbus.la  libmodbus.so.5.0.5
ethercat/lib/pkgconfig/: libmodbus.pc
ethercat/lib/systemd/system/: ethercat.service
ethercat/sbin/: ethercatctl
